infra/longhorn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn
  labels:
    kubernetes.io/metadata.name: longhorn
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
